--- a/DbManager/App.config
+++ b/DbManager/App.config
@@ -8,7 +8,7 @@
 
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=dbmanager;Integrated Security=True;MultipleActiveResultSets=True"
+         connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=Manager;Integrated Security=True;MultipleActiveResultSets=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
     
