--- a/DbManager/DbManager.csproj
+++ b/DbManager/DbManager.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IDocxFileService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IFacilityService.cs" />
+    <Compile Include="Core\DbProvider\Datacontext\Interfaces\IFileDialogService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IRootPasswordService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\ManagerContext.cs" />
     <Compile Include="Core\Services\FileServices\DocxFileService.cs" />
@@ -85,6 +86,8 @@
     <Compile Include="Core\Services\DbService\RecordNotFoundException.cs" />
     <Compile Include="Core\Services\DbService\RootPasswordService.cs" />
     <Compile Include="Core\Services\FileServices\FileDialogService.cs" />
+    <Compile Include="Mvvm\DelegateCommand.cs" />
+    <Compile Include="Mvvm\DelegateCommand{T}.cs" />
     <Compile Include="ViewModels\MainViiewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -122,9 +125,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mvvm\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="FodyWeavers.xml" />
   </ItemGroup>
