--- a/DbManager/packages.config
+++ b/DbManager/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="Fody" version="2.2.1.0" targetFramework="net45" developmentDependency="true" />
+  <package id="FontAwesome.UWP" version="4.7.0.9" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="2.1.4" targetFramework="net45" developmentDependency="true" />
 </packages>
