--- a/DbManager/DbManager.csproj
+++ b/DbManager/DbManager.csproj
@@ -46,9 +46,24 @@
     <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.UWP.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PropertyChanged, Version=2.1.4.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.2.1.4\lib\netstandard1.0\PropertyChanged.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="Spire.Common, Version=1.2.761.6040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>..\packages\Spire.XLS.7.12.125\lib\net40\Spire.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Spire.License, Version=1.3.6.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Spire.XLS.7.12.125\lib\net40\Spire.License.dll</HintPath>
+    </Reference>
+    <Reference Include="Spire.Pdf, Version=3.9.496.6040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>..\packages\Spire.XLS.7.12.125\lib\net40\Spire.Pdf.dll</HintPath>
+    </Reference>
+    <Reference Include="Spire.XLS, Version=7.12.125.6040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>..\packages\Spire.XLS.7.12.125\lib\net40\Spire.XLS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -83,19 +98,16 @@
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IDocxFileService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IFacilityService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IFileDialogService.cs" />
-    <Compile Include="Core\DbProvider\Datacontext\Interfaces\IFileSerializationService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\Interfaces\IRootPasswordService.cs" />
-    <Compile Include="Core\DbProvider\Datacontext\Interfaces\ISerializationService.cs" />
     <Compile Include="Core\DbProvider\Datacontext\ManagerContext.cs" />
     <Compile Include="Core\Services\Converters\SearchVisibilityConverter.cs" />
     <Compile Include="Core\Services\DbService\DatabaseMigrationService.cs" />
+    <Compile Include="Core\Services\Extension\MigrationHelper.cs" />
     <Compile Include="Core\Services\FileServices\DocxFileService.cs" />
     <Compile Include="Core\Services\DbService\FacilityService.cs" />
     <Compile Include="Core\Services\DbService\RecordNotFoundException.cs" />
     <Compile Include="Core\Services\DbService\RootPasswordService.cs" />
     <Compile Include="Core\Services\FileServices\FileDialogService.cs" />
-    <Compile Include="Core\Services\FileServices\FileSerializationService.cs" />
-    <Compile Include="Core\Services\Serialization\SerializationService.cs" />
     <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Mvvm\DelegateCommand{T}.cs" />
     <Compile Include="ViewModels\MainViiewModel.cs" />
