--- a/DbManager/App.config
+++ b/DbManager/App.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=ManagerDatabase;Integrated Security=True;MultipleActiveResultSets=True"
+         connectionString="data source=.\SQLEXPRESS;Initial Catalog=ManagerDatabase;Integrated Security=True;MultipleActiveResultSets=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
     
